--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply plugin: 'com.saantiaguilera.gradle.publish.helper'
 
 buildscript {
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath "com.android.tools.build:gradle:$androidBuildToolsGradle"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.saantiaguilera.gradle.publish.helper:core:$publishHelperVersion"
+
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:$bintrayPluginVersion"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:$mavenPluginVersion"
     }
 }
 
@@ -18,6 +20,26 @@ allprojects {
     }
 }
 
+publishGlobalConfigurations {
+    groupId = group
+    versionname = version
+
+    githubUrl = "https://github.com/saantiaguilera/android-api-RxFacebook"
+
+    bintrayApiKey = System.getenv('BINTRAY_SANTI_KEY')
+    bintrayUser = System.getenv('BINTRAY_SANTI_USER')
+
+    licenseUrl = "http://www.opensource.org/licenses/BSD-3-Clause"
+    licenseName = "The 3-Clause BSD License"
+}
+
 task clean(type:Delete) {
     delete rootProject.buildDir
 }
+
+wrapper {
+    version = '3.5'
+    distributionType = Wrapper.DistributionType.ALL
+}
+
+apply from: 'dependencies.gradle'
