--- a/rxfacebook/build.gradle
+++ b/rxfacebook/build.gradle
@@ -1,20 +1,19 @@
 apply plugin:'com.android.library'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion androidTargetSdkVersion.toInteger()
+    buildToolsVersion androidBuildToolsVersion
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 25
-        versionName "1.0"
-
+        minSdkVersion androidMinimumSdkVersion
+        targetSdkVersion androidTargetSdkVersion
+        consumerProguardFiles 'proguard-rules.pro'
     }
 }
 
 dependencies {
-    compile 'com.facebook.android:facebook-android-sdk:4.5.0'
+    compile facebook.sdk
 
-    provided "io.reactivex:rxandroid:1.2.1"
-    provided "io.reactivex:rxjava:1.1.6"
+    provided rx.java
+    provided rx.android
 }
