--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,9 @@ jobs:
     - stage: test
       script: bash "ci/run_script.sh"
       env: TEST_SUITE="rxfacebook:build" MODULE_DIR="rxfacebook"
+    - stage: test
+      script: bash "ci/run_script.sh"
+      env: TEST_SUITE="testapp:build" MODULE_DIR="testapp"
 
 env:
   global:
