--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,8 @@ android:
     - tools
     - build-tools-25.0.3
     - android-25
+    - extra-google-m2repository
+    - extra-android-m2repository
 
 cache:
   directories:
