--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,4 +1,9 @@
 ext {
+    supportVersion = '25.4.0'
+    support = [
+        appcompat : "com.android.support:appcompat-v7:$supportVersion"
+    ]
+
     facebookSdkVersion = '4.5.0' // Using explicit 4.5.0 since its the last one with min api level 14
     facebook = [
         sdk : "com.facebook.android:facebook-android-sdk:$facebookSdkVersion"
