--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ androidBuildToolsGradle = 2.3.2
 publishHelperVersion = 3.0.0
 bintrayPluginVersion = 1.7.3
 mavenPluginVersion = 1.5
+kotlinVersion = 1.1.3
 
 ### Project versiosn
 androidBuildToolsVersion = 25.0.3
