--- a/testapp/build.gradle
+++ b/testapp/build.gradle
@@ -1,4 +1,5 @@
 apply plugin:'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion androidTargetSdkVersion.toInteger()
@@ -19,10 +20,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
     compile support.appcompat
+    compile support.v4
 
     compile rx.java
     compile rx.android
