--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,9 @@ jobs:
     - stage: test
       script: bash "ci/run_script.sh"
       env: TEST_SUITE="testapp:build" MODULE_DIR="testapp"
+    - stage: test
+      script: bash "ci/run_script.sh"
+      env: TEST_SUITE="rx2facebook:build" MODULE_DIR="rx2facebook"
 
 env:
   global:
